Fix not showing Bash tab in mobile

--- a/assets/stylesheets/new-stylesheets/pages/_get-started.scss
+++ b/assets/stylesheets/new-stylesheets/pages/_get-started.scss
@@ -481,7 +481,6 @@
       ul {
         white-space: nowrap;
         width: calc(100% - 59px);
-        overflow: scroll;
       }
     }
   }
